start work on 'generic' search box

--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -49,7 +49,7 @@
     <a href="/changelog" class="item">Changelog</a>
     <div class="right menu">
       <div class="item" style="padding: 0;">
-        <form class="" action="/release/search" method="get" role="search" aria-label="Papers">
+        <form class="" action="/search" method="get" role="search" aria-label="Papers">
           <div class="ui transparent inverted icon input">
             <i class="search icon" style="padding-right: 2em;"></i>
             <input type="text" placeholder="Search Papers..." name="q" style="border: 1px solid #777 !important; padding: 5px !important; width: 15em;">
