new entity view tabs mobile hack

--- a/python/fatcat_web/templates/entity_base.html
+++ b/python/fatcat_web/templates/entity_base.html
@@ -35,7 +35,7 @@
             <br>
           {% endif %}
         {% endif %}
-        <div class="ui container">
+        <div class="ui container" style="min-width: 40em;">
           <div class="ui small tabular compact menu">
             {{ entity_tab("overview", "Overview", "") }}
             {% if entity_type == "release" %}
