remove slight white bar at bottom

--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -23,7 +23,7 @@
   </style>
   {% block extra_head %}{% endblock %}
 </head>
-<body style="margin-bottom: 100px; height: auto;">
+<body style="margin-bottom: 100px;">
 
 <header class="ui fixed inverted menu">
   <div class="ui container">
