query hint text; space numbers better

--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -18,7 +18,7 @@
       <meta itemprop="target" content="https://{{ config.FATCAT_DOMAIN }}/search?q={q}"/>
       <div class="ui form">
         <div class="ui action input huge fluid">
-          <input type="text" placeholder="Query..." name="q" aria-label="search metadata" required itemprop="query-input">
+          <input type="text" placeholder="by title, authors, identifiers..." name="q" aria-label="search metadata" required itemprop="query-input">
           <button class="ui green button">Search</button>
         </div>
       </div>
@@ -29,13 +29,13 @@
 <div class="ui vertical stripe segment">
   <div class="ui centered grid">
     <div class="row">
-      <div class="three wide center aligned column">
+      <div class="four wide mobile three wide center aligned column">
         <h4>81,115,372<br>Papers</h4>
       </div>
-      <div class="three wide center aligned column">
-        <h4>16,071,778<br>Preserved</h4>
+      <div class="four wide mobile three wide center aligned column">
+        <h4>16,071,778<br>Fulltext</h4>
       </div>
-      <div class="three wide center aligned column">
+      <div class="four wide mobile three wide center aligned column">
         <h4>108,801<br>Journals</h4>
       </div>
     </div>
