--- a/python/fatcat_web/templates/container_view.html
+++ b/python/fatcat_web/templates/container_view.html
@@ -124,7 +124,7 @@
 {% endif %}
 </div>
 
-{{ entity_macros.fatcat_bits(entity, "container", "") }}
+{{ entity_macros.fatcat_bits(entity, "container", "", editgroup) }}
 
 </div>
 </div>
