implement major refactor for other entity types

--- a/python/fatcat_web/templates/container_edit.html
+++ b/python/fatcat_web/templates/container_edit.html
@@ -10,7 +10,7 @@
 {% endblock %}
   {{ form.hidden_tag() }}
 
-  <h3 class="ui dividing header">Editgroup</h3>
+  <h3 class="ui dividing header">Editgroup Metadata</h3>
   {{ edit_macros.editgroup_dropdown(form, editgroup, potential_editgroups) }}
 
   <h3 class="ui dividing header">The Basics</h3>
@@ -70,7 +70,6 @@
 <!-- Form code -->
 $(document).ready(function() {
 
-  $('.ui.accordion').accordion();
   $('.ui.dropdown') .dropdown();
 
   var fixup_url_numbering = function(group_item) {
